Reduce emote loading allocations